fixed broken css for VisitListTable

--- a/petclinic-frontend/src/features/visits/VisitListTable.css
+++ b/petclinic-frontend/src/features/visits/VisitListTable.css
@@ -63,7 +63,7 @@ h2 {
   margin-bottom: 15px;
 }
 
-/* .modal {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -112,7 +112,7 @@ h2 {
 }
 
 /* Cancel button */
-/* .modal-buttons button:first-of-type {
+ .modal-buttons button:first-of-type {
   background-color: #6c757d;
   color: #fff;
 }
@@ -122,7 +122,7 @@ h2 {
 }
 
 /* Confirm button */
-/* .modal-buttons button:last-of-type {
+ .modal-buttons button:last-of-type {
   background-color: #0144aa;
   color: #fff;
 }
@@ -147,6 +147,7 @@ main{
   padding: 20px;
 }
 
+/* Sidebar */
 
 #sidebar{
     height:100vh;
@@ -178,8 +179,6 @@ ul > li:first-child{
     padding-left: 20px;
     margin: 8px;
 }
-
-/* Sidebar */
 
 #sidebar li > a {
     flex-grow: 100;
@@ -242,13 +241,3 @@ ul > li:first-child{
     height:28px;
     fill:#ffffff;
 }
-/* 
-.unread-icon{
-    width:20px;
-    height:20px;
-    
-    fill:none;
-    
-    stroke:#000000;
-    
-} */
